Removed Roboto; fixed wrong font; removed our own device size variable

--- a/Source/E133.Web/app/quick-recipe/assets/css/_help-overlay.scss
+++ b/Source/E133.Web/app/quick-recipe/assets/css/_help-overlay.scss
@@ -20,7 +20,7 @@
         bottom: 15%;
     }
 
-    @media only screen and (max-width: $mobile-max-width) {
+    @media #{$small-and-down} {
         .slider,
         .slides {
             height: 100% !important;
