--- a/Source/E133.Web/app/quick-recipe/assets/css/_quick-recipe-header.scss
+++ b/Source/E133.Web/app/quick-recipe/assets/css/_quick-recipe-header.scss
@@ -135,7 +135,7 @@ header {
     }
 }
 
-@media only screen and (max-width: $mobile-max-width) {
+@media #{$small-and-down} {
     header nav .dropdown-content {
         padding: 0;
         min-width: 300px;
@@ -161,7 +161,7 @@ header {
     }
 }
 
-@media only screen and (max-width: $tablet-max-width) {
+@media #{$medium-and-down} {
     header nav a.brand-logo {
         position: relative;
     }
