--- a/Source/E133.Web/app/quick-recipe/assets/css/main.scss
+++ b/Source/E133.Web/app/quick-recipe/assets/css/main.scss
@@ -189,7 +189,7 @@
             }
         }
 
-        @media only screen and (max-width: $mobile-max-width) {
+        @media #{$small-and-down} {
             main {
                 padding: 0;
 
